--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         }
 
         .logo img {
-            height: 40px;
+            margin-top: auto;
+            height: 35px;
             width: auto;
         }
 
@@ -573,7 +574,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="Logo.png" alt="Solara">
+            <img src="Logo2.webp" alt="Solara">
         </div>
         <a href="#" class="support-btn">
             <svg viewBox="0 0 24 24" fill="currentColor">
@@ -639,7 +640,7 @@
                         <div class="stat-label">Rating</div>
                     </div>
                 </div>
-                <a href="#" class="visit-store-btn">Visit Store</a>
+                <a href="https://noahsmods.com/product/solara-cs2" class="visit-store-btn">Visit Store</a>
             </div>
 
             <!-- Reseller 2 - Trusted -->
@@ -660,7 +661,7 @@
                         <div class="stat-label">Rating</div>
                     </div>
                 </div>
-                <a href="#" class="visit-store-btn">Visit Store</a>
+                <a href="https://eclipsemods.com/product/solara-cs2" class="visit-store-btn">Visit Store</a>
             </div>
         </div>
     </section>
