--- a/index.html
+++ b/index.html
@@ -622,8 +622,13 @@
         <div class="hero-content">
             <h1 class="motto">Your game, your rules.</h1>
             <p class="subtitle">
-              Elevate your experience like <span id="user-count" class="counter"></span> others.
+              Elevate your experience like
+              <span id="user-count-container" class="usercount-container">
+                <span id="user-count" class="counter"></span>
+              </span>
+              others.
             </p>
+
 
         </div>
         <div class="scroll-indicator"></div>
